[package]
name = "progress-download"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.10.4", features = ["stream"]}
tokio = {version = "0.2.20", features = ["macros", "rt-threaded"]}
futures = "0.3.4"
async-std = "1.5.0"
indicatif = "0.14.0"
